# libthread

./: .clang-format  CMakeLists.txt  LICENSE  LICENSE2  README.md
cmake/: utils.cmake
hooks/: pre-commit
include/: ithread.h
src/: ithread.c
